ghost/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
      - name: ghost
        image: ghost:alpine
        ports:
        - containerPort: 2368
        resources:
          requests:
            cpu: 100m
            memory: 300Mi
          limits:
            cpu: 100m
            memory: 300Mi
        volumeMounts:
        - mountPath: /var/lib/ghost/content
          name: ghost-storage
      volumes:
      - name: ghost-storage
        persistentVolumeClaim:
          claimName: ghost-pvc
